// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render ExpensesSummary with multiple expenses 1`] = `
<div>
  <h1>
    Total amount of 
    0
     
    expenses
    : 
    $1,235.00
  </h1>
</div>
`;

exports[`should render ExpensesSummary correctly 1`] = `
<div>
  <h1>
    Total amount of 
    0
     
    expenses
    : 
    $0.00
  </h1>
</div>
`;

exports[`should render ExpensesSummary correctly with 1 expense 1`] = `
<div>
  <h1>
    Total amount of 
    0
     
    expenses
    : 
    $235.00
  </h1>
</div>
`;
